src/test/ui/type-alias-impl-trait/issue-60564.stderr
error: type parameter `E` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-60564.rs:20:49
   |
LL |       fn iter_bits(self, n: u8) -> Self::BitsIter {
   |  _________________________________________________^
LL | |
LL | |         (0u8..n)
LL | |             .rev()
LL | |             .map(move |shift| ((self >> T::from(shift)) & T::from(1)).try_into().unwrap())
LL | |     }
   | |_____^

error: could not find defining uses
  --> $DIR/issue-60564.rs:8:1
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

